--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,13 +1,13 @@
 .topbar {
-    position: fixed;
     width: 100%;
-    height: 75px;
     background: linear-gradient(135deg, #00264d, #00b386); /* Azul a verde */
     color: white;
     display: flex;
+    flex: 0 0 75px;
     align-items: center;
     justify-content: space-between;
     padding: 0 20px;
+    box-sizing: border-box; /* para que el padding sea interno y no externo */
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     z-index: 1000;
 }
