--- a/src/index.css
+++ b/src/index.css
@@ -19,9 +19,25 @@ body {
   color: #333333; /* Gris oscuro */
   font-family: 'Roboto', sans-serif;
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   height: 100%;
   width: 100%;
+}
+
+.contenedorPrincipal {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  background-color: rgb(255, 255, 255);
+}
+
+.contenedorApp {
+  width: 100%;
+  height: 100%;
+  background-color: magenta;
+  border: 5px solid rgb(255, 255, 255);
+  border-radius: 30px;
+  box-sizing: border-box;
 }
 
 code {
