--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -1,11 +1,61 @@
 .sidebar {
-    padding: 15px;
     width: 260px;
+    height: 100%;
     background: linear-gradient(135deg, #00264d, #113e86); /* Azul degradado */
     color: white;
-    height: 100%;
-    position: fixed;
-    top: 70px; /* Debajo de la barra superior */
-    left: 0;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+}
+
+.logo {
+    font-size: 24px;
+    font-weight: bold;
+    padding: 20px 0px;
+    width: 100%;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.2);
+    letter-spacing: 1px;
+}
+
+.sidebar ul {
+    list-style: none;
+}
+
+.sidebar ul li {
+    padding: 15px 20px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    color: white;
+}
+
+.sidebar ul li.active {
+    background-color: rgba(0, 0, 0, 0.5);
+    font-weight: bold;
+    border-left: 5px solid white;
+}
+
+.sidebar ul li:hover { 
+    background-color: rgba(255, 255, 255, 0.2);
+    transform: scale(1.02); 
+    transition: background-color 0.3s ease, transform 0.3s ease; 
+}
+
+.sidebar ul li a {
+    color: white;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.sidebar ul li a:hover {
+    color: #ffc107; /* Cambia a un amarillo vibrante */
+    transform: translateX(5px); /* Mueve ligeramente hacia la derecha */
+    transition: transform 0.3s ease, color 0.3s ease;
+}
+
+.sidebar ul li a i {
+    margin-right: 10px;
 }
