--- a/src/index.css
+++ b/src/index.css
@@ -28,14 +28,14 @@ body {
   width: 100%;
   height: 100%;
   display: flex;
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(0, 164, 151);
 }
 
 .contenedorApp {
-  width: 100%;
-  height: 100%;
-  background-color: magenta;
-  border: 5px solid rgb(255, 255, 255);
+  flex: 0.99;
+  margin: auto; /* Centra dentro del espacio sobrante */
+  height: 98%; /* Este es el tamaño relativo del contenedorApp */
+  background-color: rgb(0, 82, 150);
   border-radius: 30px;
   box-sizing: border-box;
 }
