--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -1,61 +1,44 @@
+
+/* a */
 .sidebar {
-    width: 260px;
     height: 100%;
     background: linear-gradient(135deg, #00264d, #113e86); /* Azul degradado */
     color: white;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
-    display: flex;
-    flex-direction: column;
 }
 
 .logo {
     font-size: 24px;
     font-weight: bold;
-    padding: 20px 0px;
-    width: 100%;
+    padding: 10px 0px; 
     text-align: center;
     background-color: rgba(0, 0, 0, 0.2);
     letter-spacing: 1px;
 }
 
-.sidebar ul {
-    list-style: none;
-}
-
 .sidebar ul li {
-    padding: 15px 20px;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    padding: 15px 10px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.161);
     transition: background-color 0.3s ease, transform 0.2s ease;
-    color: white;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
 }
 
 .sidebar ul li.active {
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.227);
     font-weight: bold;
     border-left: 5px solid white;
 }
 
 .sidebar ul li:hover { 
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: rgba(255, 255, 255, 0.084);
     transform: scale(1.02); 
     transition: background-color 0.3s ease, transform 0.3s ease; 
-}
-
-.sidebar ul li a {
-    color: white;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    font-size: 16px;
-    cursor: pointer;
-}
-
-.sidebar ul li a:hover {
+    transform: translateX(3px); /* Mueve ligeramente hacia la derecha */
     color: #ffc107; /* Cambia a un amarillo vibrante */
-    transform: translateX(5px); /* Mueve ligeramente hacia la derecha */
-    transition: transform 0.3s ease, color 0.3s ease;
 }
 
-.sidebar ul li a i {
+.sidebar ul i {
     margin-right: 10px;
 }
